--- a/style.css
+++ b/style.css
@@ -185,11 +185,12 @@ header {
   font-size: 14px;
   color: #a1a1a1;
 }
-.info {
+.info span{
   color: #0099ff;
   font-size: 14px;
   font-family: 'Khala Mid';
 }
+
 
 /* Service Panel */
 .service-content {
@@ -880,16 +881,9 @@ body.sheet-open{ overflow: hidden; }
 
   width: 40px;
   height: 40px;
-  border-radius: 999px;
+  border-radius: 13px;
   border: 1px solid rgba(15, 23, 42, 0.12);
-  background: rgba(255,255,255,0.92);
-  backdrop-filter: blur(14px);
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 1;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  background: rgb(255, 255, 255);
 }
 
 /* sheet content spacing */
@@ -1038,4 +1032,20 @@ body.dark ::-webkit-scrollbar-thumb {
 /* ពេល hover */
 body.dark ::-webkit-scrollbar-thumb:hover {
   background: #333333;
+}
+
+/* Scrollbar width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: #ffffff00;   /* ប្តូរពណ៍ផ្ទៃក្រោយ */
+}
+
+/* Thumb (the scroll handle) */
+::-webkit-scrollbar-thumb {
+  background: #b9b9b9;      /* ពណ៍ scrollbar */
+  border-radius: 10px;
 }
