--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Khala Regular Khmer';
-  src: url('Krasar Regular.ttf') format('truetype');
+  src: url('font/KantumruyPro-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,12 +15,17 @@
 }
 @font-face {
   font-family: 'Khala Mid Khmer';
-  src: url('KantumruyPro-Medium.ttf') format('truetype');
+  src: url('font/KantumruyPro-Medium.ttf') format('truetype');
   font-style: normal;
 }
 @font-face {
   font-family: 'Khala Mid';
   src: url('SF-Pro-Text-Medium.otf') format('truetype');
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Khala Bold Khmer';
+  src: url('font/static/KantumruyPro-Bold.ttf') format('truetype');
   font-style: normal;
 }
 
@@ -169,14 +174,14 @@ header {
   padding: 10px;
 }
 .info h3 {
-  font-family: 'Khala Mid', sans-serif;
+  font-family: 'Khala Mid', sans-serif !important;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 15px;
   margin: 0 0 5px;
-  color: #333;
+  color: #666;
 }
 .info p {
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'Khala Regular Khmer';
   color: #666;
   margin: 0 0 5px;
@@ -188,7 +193,7 @@ header {
 .info span{
   color: #0099ff;
   font-size: 14px;
-  font-family: 'Khala Mid';
+  font-family: 'Khala Mid khmer';
 }
 
 
@@ -957,8 +962,8 @@ body.sheet-open{ overflow: hidden; }
 }
 .fix-list li{
   margin: 8px 0;
-  line-height: 1.7;
-  color: #8d8d8d;
+  line-height: 1.3;
+  color: #666666;
 }
 
 /* buy button */
@@ -1048,4 +1053,17 @@ body.dark ::-webkit-scrollbar-thumb:hover {
 ::-webkit-scrollbar-thumb {
   background: #b9b9b9;      /* ពណ៍ scrollbar */
   border-radius: 10px;
+}
+
+
+/* Tab3 */
+.text-tab3 p{
+  margin: 16px 0 10px;
+  font-family: 'Khala bold Khmer', system-ui, sans-serif;
+  font-size: 18px;
+  text-align: center;
+
+  background: linear-gradient(90deg, #0a5fcd, #d000ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
