--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Khala Regular Khmer';
-  src: url('font/KantumruyPro-Medium.ttf') format('truetype');
+  src: url('KantumruyPro-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 }
 @font-face {
   font-family: 'Khala Mid Khmer';
-  src: url('font/KantumruyPro-Medium.ttf') format('truetype');
+  src: url('KantumruyPro-Medium.ttf') format('truetype');
   font-style: normal;
 }
 @font-face {
@@ -25,7 +25,7 @@
 }
 @font-face {
   font-family: 'Khala Bold Khmer';
-  src: url('font/static/KantumruyPro-Bold.ttf') format('truetype');
+  src: url('KantumruyPro-Bold.ttf') format('truetype');
   font-style: normal;
 }
 
